# Cmake_homework

./: CMakeLists.txt  README.md
A/: CMakeLists.txt  script.py
B/: main.cpp
